--- a/FE/hightstar/package.json
+++ b/FE/hightstar/package.json
@@ -13,9 +13,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
