--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=hightstar
 spring.datasource.url=jdbc:mysql://localhost:3306/hightstar
 spring.datasource.username=root
-spring.datasource.password=linhnguyen1
+spring.datasource.password=12345
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto= update
 
 # Gửi email 
 spring.mail.host=smtp.gmail.com
