--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=12345
 # spring.datasource.password=thangdino03
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Gửi email 
 spring.mail.host=smtp.gmail.com
@@ -25,4 +25,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-
+management.endpoints.web.exposure.include=*
+management.endpoints.jmx.exposure.include=*
+spring.devtools.livereload.enabled=true
