--- a/FE/hightstar/package.json
+++ b/FE/hightstar/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.11.3",
     "hightstar": "file:",
     "jwt-decode": "^4.0.0",
+    "qz-tray": "^2.2.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
