--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# fix bug spring
+management.endpoints.web.exposure.include=*
+management.endpoints.jmx.exposure.include=*
+spring.devtools.livereload.enabled=true
