--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=hightstar
 spring.datasource.url=jdbc:mysql://localhost:3306/hightstar
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=linhnguyen1
 # spring.datasource.password=thangdino03
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
@@ -14,8 +14,8 @@ allowed.origins=http://localhost:3000,http://localhost:4000,http://192.168.1.21:
 # Gửi email 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=linhncpd07633@fpt.edu.vn
-spring.mail.password=ctqm rvlu wcvk bbap
+spring.mail.username=hightstarpoolcompany@gmail.com
+spring.mail.password=vfwn clfh marn nelc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
