--- a/FE/hightstar/package.json
+++ b/FE/hightstar/package.json
@@ -7,21 +7,28 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
+    "font-awesome": "^4.7.0",
     "hightstar": "file:",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "qr-scanner": "^1.4.2",
     "qz-tray": "^2.2.4",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-select": "^5.8.2",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.1",
+    "slick-carousel": "^1.8.1",
+    "tempusdominus": "^5.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
