--- a/FE/hightstar/package.json
+++ b/FE/hightstar/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-number-format": "^5.4.2",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
