thêm quyền cho domain

--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 # Định nghĩa allowed origins, có thể là nhiều miền, phân cách bởi dấu phẩy. Phải cấu hình này để bảo mật, ngăn chặn các miền khác có thể kết nối đc với server này
-allowed.origins=http://localhost:3000,http://localhost:4000,http://192.168.1.21:3000,http://hightstar.nguyendinhnghi.id.vn
+allowed.origins=http://localhost:3000,http://localhost:4000,http://192.168.1.21:3000,http://hsp.hightstarpool.id.vn,http://hightstarpool.nguyendinhnghi.id.vn,
 
 
 # Gửi email 
