--- a/FE/hightstar/package.json
+++ b/FE/hightstar/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
-    "bootstrap": "^5.3.0",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "font-awesome": "^4.7.0",
     "hightstar": "file:",
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.4.0",
     "react-number-format": "^5.4.2",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.2",
