Thêm đơn hàng lúc tạo vé mới

--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=linhnguyen1
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
 # Định nghĩa allowed origins, có thể là nhiều miền, phân cách bởi dấu phẩy. Phải cấu hình này để bảo mật, ngăn chặn các miền khác có thể kết nối đc với server này
@@ -14,13 +14,14 @@ allowed.origins=http://localhost:3000,http://localhost:4000,http://192.168.1.21:
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hightstarpoolcompany@gmail.com
-spring.mail.password=dvhm jtgi vpnq sf
+spring.mail.password=vfwn clfh marn nelc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Tăng giới hạn kích thước cho file upload và tổng request
 spring.servlet.multipart.enabled=true
