--- a/FE/hightstar/package.json
+++ b/FE/hightstar/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-loading-skeleton": "^3.5.0",
     "react-number-format": "^5.4.2",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.2",
