--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hightstar
 spring.datasource.url=jdbc:mysql://localhost:3306/hightstar
-spring.datasource.username=hightstar
+spring.datasource.username=root
 spring.datasource.password=12345
 
 spring.jpa.show-sql=true
