--- a/FE/hightstar/package.json
+++ b/FE/hightstar/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
     "hightstar": "file:",
