--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=hightstar
 spring.datasource.url=jdbc:mysql://localhost:3306/hightstar
 spring.datasource.username=root
-spring.datasource.password=linhnguyen1
+# spring.datasource.password=linhnguyen1
 # spring.datasource.password=thangdino03
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
