commit trước push

--- a/BE/hightstar/src/main/resources/application.properties
+++ b/BE/hightstar/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=hightstar
 spring.datasource.url=jdbc:mysql://localhost:3306/hightstar
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=linhnguyen1
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
 # Định nghĩa allowed origins, có thể là nhiều miền, phân cách bởi dấu phẩy. Phải cấu hình này để bảo mật, ngăn chặn các miền khác có thể kết nối đc với server này
-allowed.origins=http://localhost:3000,http://localhost:4000,http://192.168.1.21:3000,http://hsp.hightstarpool.id.vn,http://hightstarpool.nguyendinhnghi.id.vn,
+allowed.origins=http://localhost:3000,http://localhost:4000,http://192.168.1.21:3000,http://hsp.hightstarpool.id.vn,
 
 # Gửi email
 spring.mail.host=smtp.gmail.com
